--- a/views/browser.ejs
+++ b/views/browser.ejs
@@ -1,2 +1,11 @@
-<h2 class="itg">Browser</h2>
-<div class="itg-container"id="foundinpd_browser_window" style="width: min-content;margin:0 auto;">
+<h3 class="itg"     style="margin-block-end: 0em;background-color: black;color: white;text-align: center;font-size: medium;">Browse By Genomic Position</h3>
+<div class="itg-container"> 
+    <div class="itg-half" style="float:right"> 
+        <p class="itg" style="line-height: 1.4em;padding:0; margin-top:0;margin-bottom:0;margin-block-start: 0em;margin-block-end: 0em;color: #778a8b;padding-left:1em;padding-right:1em;font-size:smaller;font-style:italic;">In the upper panel, transcrips are shown along with median expression values from either RNA-seq or smRNA-seq. Values are DESeq2-normalized (library size) and varianze-stabilized (VST). <strong>CAGE-seq</strong> data are CPM normalized counts for the respective position windows, and are scaled to the max within the window.<strong>Methylation</strong> data are quantile normalized the values plotted are Beta-values (0=no methylation, 0.5=one allele, 1=both alleles).</p>        
+    </div>
+</div>
+<div class="itg-row">
+    <div class="itg-container" id="foundinpd_browser_window" style="width: min-content;margin:0 auto;"></div>
+</div>
+
+
